added footer, debug

--- a/assets/all_categories/all.css
+++ b/assets/all_categories/all.css
@@ -5,7 +5,6 @@
   font-size: 3.5rem;
   color: #fab999;
   text-shadow: 2px 2px 8px #000000;*/
-
   align-items: center;
   height: 8em;
   width: auto;
@@ -18,45 +17,42 @@
 }
 
 .header {
-  background-image: url("marble.jpeg");
+  background-image: url("../images/marble.jpeg");
   background-size: cover;
   padding: 0.5rem;
   text-align: center;
+
 }
 
-.container {
-  background-color: #F5F5F5;
+
+.container-fluid {
+  background: rgba(61, 61, 107, 0.5);
 }
 
 #topnav {
   overflow: hidden;
-  background-image: linear-gradient(#f5f5f7, #cccc, #cccc, #f5f5f7);
-  background-image: url("marble.jpeg");
-  box-shadow: 0px 0.5px 1px #ccc;
-  align-items: stretch;
-  z-index: 99;
+  background-color: #000000;
 }
 
 #topnav a {
   float: left;
   display: block;
+  color: #fab999;
   text-align: center;
-  color: black;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
 
 #topnav a:hover {
-  border-bottom: 5px solid #fab888;
-  color: #FFFFFF;
-  text-shadow: 0px 0px 3px #000000;
-
+  background-color: #fab888;
+  color: #000000;
 }
 
 #topnav a.active {
+  background-color: #F5F5F5;
   color: #000000;
-  border-bottom: 5px solid #fab888;
+  float: right;
 }
 
 #topnav input[type=text] {
@@ -68,26 +64,26 @@
   font-size: 19px;
 }
 
+#all {
+  width: 20%;
+  float: right;
+}
+
 body {
-  background-image: url("marble.jpeg");
+  background-image: url("../images/marble.jpeg");
   position: static;
 }
 
-#all {
-  width: 20%;
-}
-
 .sticky {
-  position: sticky;
+  position: fixed;
   top: 0;
-  width: 100%;
+  width: 77%;
 }
 
 /*CONTENT*/
 
 .row {
   padding: 1em;
-  z-index: -9;
 }
 
 .choiceItems {
@@ -100,17 +96,20 @@ body {
   padding: 1rem;
 }
 
+
 /* CAROUSEL */
+
+.carousel-control-next {
+  background: #E8E8E8;
+}
+
+.carousel-control-prev {
+  background: #E8E8E8;
+}
 
 .row {
   align-items: center;
 }
-
-.PRODUCT1 {
-  width: 300px;
-  height: auto;
-}
-
 
 @media screen and (max-width: 600px) {
   .topnav a, .topnav input[type=text] {
@@ -125,3 +124,4 @@ body {
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
+}
