--- a/assets/essentials/products.css
+++ b/assets/essentials/products.css
@@ -17,27 +17,27 @@
 }
 
 .header {
-  background-image: url("marble.jpeg");
+  background-image: url("../images/marble.jpeg");
   background-size: cover;
   padding: 0.5rem;
   text-align: center;
 
 }
 
-body {
-  background-image: linear-gradient(#F5F5F5, yellow);
-}
-
+/*.container {
+  background-color: #F5F5F5;
+}*/
 
 #topnav {
   overflow: hidden;
-  background-color: #000000;
+  /*background-image: url("../marble.jpeg");*/
+
 }
 
 #topnav a {
   float: left;
   display: block;
-  color: #fab999;
+  color: #000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -45,13 +45,13 @@ body {
 }
 
 #topnav a:hover {
-  background-color: #fab888;
   color: #000000;
+  border-bottom: 5px solid #fab888;
 }
 
 #topnav a.active {
-  background-color: #F5F5F5;
   color: #000000;
+  border-bottom: 5px solid #fab888;
 }
 
 #topnav input[type=text] {
@@ -66,6 +66,10 @@ body {
 #all {
   width: 20%;
   float: right;
+}
+
+body {
+  background-image: url("../images/marble.jpeg");
 }
 
 .sticky {
@@ -90,6 +94,9 @@ body {
   padding: 1rem;
 }
 
+.container-fluid {
+  background: rgba(61, 61, 107, 0.5);
+}
 
 /* CAROUSEL */
 
@@ -118,3 +125,4 @@ body {
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
+}
